recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:9: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters sides, length, shrink.
      polygonFractal(length)
                    ^